# taintly

./: .gitignore  .gitleaks.toml  .pre-commit-hooks.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  action.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml  secret-scan.yml  security.yml  test-release.yml
docs/: AI_TRIAGE.md  SCORING.md  STRUCTURAL_READER_SCOPE.md
docs/decisions/: ai-assisted-triage-pointer.md  structural-reader-phase-2-migration.md  threat-model-disclosure-not-adjustment.md
scripts/: audit_rule_paths.py  check_premerge_hygiene.py  no_rules_change_gate.py  update_readme_coverage.py
taintly/: __init__.py  __main__.py  _pattern_contract.py  advisories.py  baseline.py  config.py  engine.py  families.py  fixes.py  gitlab_taint.py  guides.py  iam_policy.py  models.py  pse_enrichment.py  scorer.py  structural_pattern.py  taint.py  transitive.py  workflow_context.py  workflow_corpus.py  yaml_path.py
taintly/data/: compromised_actions.json
taintly/ingestion/: github_api.py  gitlab_api.py
taintly/parsers/: anchor_expander.py  common.py  github.py  gitlab.py  segmentation.py
taintly/parsers/structural/: __init__.py  api.py  tokenizer.py  walker.py
taintly/parsers/structural/schemas/: __init__.py  github_actions.py  gitlab_ci.py
taintly/platform/: __init__.py  github_checks.py  github_client.py  github_sha_verify.py  gitlab_checks.py  gitlab_client.py  jenkins_checks.py  jenkins_client.py  token.py
taintly/reporters/: _encoding.py  csv_report.py  html_report.py  json_report.py  sarif.py  score_text.py  text.py
taintly/rules/: _build_tools.py  registry.py
taintly/rules/github/: ai.py  cross_workflow.py  lotp.py  pse.py  sec10_logging_visibility.py  sec1_sec5_sec6_sec7_sec9.py  sec2_sec6_iam_credentials.py  sec3_sec4_supply_chain_ppe.py  sec4_ppe_extended.py  sec8_ungoverned_services.py  taint.py
taintly/rules/gitlab/: ai.py  lotp.py  sec1_sec4_sec6_sec7_sec9.py  sec2_sec4_sec6_sec8_sec9_sec10.py  sec3_sec6_supply_chain_creds.py  sec8_ungoverned_services.py  taint.py
taintly/rules/jenkins/: ai.py  lotp.py  sec_jenkins.py  taint.py
taintly/suppressions/: __init__.py  zizmor_compat.py
taintly/testing/: integration_tests.py  mutations.py  self_test.py
taintly/testing/fixtures/: README.md  github_all_findings.yml  github_prt_checkout.yml  github_unpinned_actions.yml  gitlab_all_findings.yml
tests/: _rule_pack_hashes.json  conftest.py
tests/evasion/: README.md  base64_shell.yml  cross_job_output_routing.yml  github_env_heredoc.yml  orphaned_sha.yml  shell_export_unsecure.yml  test_evasion.py  variable_indirection.yml
tests/fixtures/github/edge_cases/: block_scalar_run_no_taint.yml  block_scalar_run_with_pr_title.yml  crlf_endings.yml  deeply_nested.yml  flow_style_step_uses.yml  flow_style_step_uses_pinned.yml  runs_on_via_merge_key.yml
tests/fixtures/github/safe/: anchor_merge_inject.yml  fully_hardened.yml  oidc_cargo_publish.yml  oidc_npm_provenance.yml  oidc_twine_use_oidc.yml  oidc_uv_publish.yml  release_trigger_with_environment.yml  secret_in_with_but_also_env.yml  with_input_no_secret.yml
tests/fixtures/github/vulnerable/: ai_agent_cli_on_pr.yml  ai_agent_dangerous_flags.yml  ai_agent_on_pr.yml  ai_agent_output_to_shell.yml  ai_agent_with_pr_checkout.yml  ai_hf_no_revision.yml  ai_joblib_load.yml  ai_llm_output_to_shell.yml  ai_mcp_privileged.yml  ai_mcp_unpinned.yml  ai_no_model_scanner.yml  ai_prompt_injection_surface.yml  ai_torch_load_unsafe.yml  ai_trust_remote_code.yml  injection_run_block.yml  ppe_classic.yml  publish_job_no_environment.yml  pull_request_target_head_sha_checkout.yml  secret_in_with_input.yml  tag_push_unquoted_ref_name.yml  taint_agent_output.yml  workflow_run_no_conclusion.yml  write_all_permissions.yml
tests/fixtures/gitlab/safe/: fully_hardened.yml
tests/fixtures/gitlab/vulnerable/: ai_agent_cli_on_mr.yml  ai_hf_no_revision.yml  ai_joblib_load.yml  ai_llm_output_to_shell.yml  ai_no_model_scanner.yml  ai_prompt_injection_surface.yml  ai_torch_load_unsafe.yml  ai_trust_remote_code.yml  artifacts_no_access.yml  cache_no_key.yml  debug_trace.yml  deploy_no_resource_group.yml  dind_no_tls.yml  docker_auth_config.yml  download_no_checksum.yml  long_lived_cloud_creds.yml  mr_pipeline_docker_push.yml  pipeline_source_only.yml  print_job_token.yml  prod_no_approval.yml  registry_override.yml  security_gate_allow_failure.yml  service_latest.yml  trigger_with_job_token.yml  unquoted_commit_message.yml  unquoted_ref_name.yml  wget_pipe_bash.yml
tests/fixtures/jenkins/realistic/: java_library_ci.Jenkinsfile  plugin_ci_build.Jenkinsfile  release_pipeline.Jenkinsfile  web_app_deploy.Jenkinsfile
tests/fixtures/jenkins/safe/: Jenkinsfile
tests/fixtures/jenkins/vulnerable/: agent_any.Jenkinsfile  ai_joblib_load.Jenkinsfile  curl_insecure.Jenkinsfile  (+31 more)
tests/fixtures/precision/: pinned_reusable_minimal.yml  placeholder_password.yml  pr_target_benign.yml  unpinned_release.yml  workflow_dispatch_safe_input.yml
tests/fuzz/: test_fuzz_yaml.py
tests/integration/: conftest.py  test_all_rules_clean.py  test_structural_corpus.py
tests/unit/: test_advisories.py  test_anchor_expander.py  test_baseline.py  test_build_tools.py  test_config_suppressions.py  test_cross_workflow_rules.py  test_detection_improvements.py  test_engine.py  test_exit_codes.py  test_families.py  test_fixes.py  test_gitlab_taint.py  test_html_report.py  test_iam_policy.py  test_imposter_commits.py  test_invariant_properties.py  test_lotp.py  test_models.py  test_parsers.py  test_pattern_contract.py  test_pattern_properties.py  test_platform_github.py  test_platform_gitlab.py  test_platform_token.py  test_precision_fixtures.py  test_pse_enrichment.py  test_reporter_snapshots.py  test_reporters.py  test_scorer_v2.py  test_segmentation.py  test_structural_pattern_block_scalars.py  test_structural_pattern_merge_keys.py  test_structural_tokenizer.py  test_structural_walker.py  test_taint.py  test_workflow_context.py  test_workflow_corpus.py  test_yaml_path.py  test_zizmor_compat.py
(+8 files in other folders)
